--- a/api/appsettings.Development.json
+++ b/api/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "MongoDbSettings": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "whichـDay"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
