--- a/api/appsettings.Development.json
+++ b/api/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "MongoDbSettings": {
     "ConnectionString": "mongodb://localhost:27017",
-    "DatabaseName": "whichـDay"
+    "DatabaseName": "which"
   },
   "Logging": {
     "LogLevel": {
